--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Candidalib - Location de véhicule à double commande pour candidats libres</title>
     <meta name="description" content="Candidalib propose la location de véhicules à double commande pour candidats libres au permis de conduire. Leçons de conduite à 35€/h ou forfait 10h à 300€.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
