--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <a href="index.html" class="logo">CANDIDALIB</a>
+                    <a href="index.html" class="logo">
+                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link active">Accueil</a></li>
