--- a/inscription.html
+++ b/inscription.html
@@ -13,7 +13,9 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <a href="index.html" class="logo">CANDIDALIB</a>
+                    <a href="index.html" class="logo">
+                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
