--- a/vehicules.html
+++ b/vehicules.html
@@ -13,7 +13,9 @@
         <nav class="navbar">
             <div class="container">
                 <div class="nav-brand">
-                    <a href="index.html" class="logo">CANDIDALIB</a>
+                    <a href="index.html" class="logo">
+                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                    </a>
                 </div>
                 <ul class="nav-menu">
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
@@ -38,38 +40,123 @@
         </div>
     </section>
 
-    <!-- Véhicules Content -->
-    <section class="vehicles-section">
+    <!-- Hero Vehicle Section -->
+    <section class="vehicle-hero-section">
         <div class="container">
-            <div class="vehicles-intro">
-                <p class="intro-text"><strong>Les véhicules Candidalib sont conformes à la législation en vigueur pour l'apprentissage à la conduite et le passage de l'examen.</strong></p>
-                <p>Tous nos véhicules utilisés pour l'apprentissage de la conduite, sont équipés d'un dispositif de double commande de frein, débrayage et de commandes électriques principales. Ils sont de type mine « auto école » comme l'exige la législation (Article R317-25 du code de la route, partie réglementaire).</p>
-                <p>Nos véhicules à double commande sont conformes à la législation française en vigueur comme l'exige l'arrêté du 8 janvier 2001 relatif à l'exploitation des établissements d'enseignement, à titre onéreux, de la conduite des véhicules à moteur et de la sécurité routière ainsi que Circulaire no 2001-5 du 25 janvier 2001 relative à l'enseignement de la conduite des véhicules à moteur et de la sécurité routière. Plusieurs marques sont proposées, selon les agences et disponibilités.</p>
+            <div class="vehicle-hero-content">
+                <div class="vehicle-hero-image">
+                    <div class="vehicle-image-wrapper">
+                        <img src="clio.jpg" alt="Renault Clio - Véhicule auto-école" class="vehicle-main-image">
+                        <div class="vehicle-badge"><span class="icon-checkmark"></span> Conforme législation</div>
+                    </div>
+                </div>
+                <div class="vehicle-hero-info">
+                    <div class="vehicle-brand-badge">Renault</div>
+                    <h2 class="vehicle-name">Clio</h2>
+                    <p class="vehicle-subtitle">Véhicule à double commande</p>
+                    <p class="vehicle-description">Notre Renault Clio est équipée d'un dispositif de double commande de frein, débrayage et de commandes électriques principales, conforme à la législation française (Article R317-25 du code de la route).</p>
+                    
+                    <div class="vehicle-features">
+                        <div class="feature-item">
+                            <div class="feature-icon icon-checkmark-custom"></div>
+                            <div class="feature-text">
+                                <strong>Double commande</strong>
+                                <span>Frein, débrayage et commandes électriques</span>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-icon icon-checkmark-custom"></div>
+                            <div class="feature-text">
+                                <strong>Conforme législation</strong>
+                                <span>Arrêté du 8 janvier 2001</span>
+                            </div>
+                        </div>
+                        <div class="feature-item">
+                            <div class="feature-icon icon-checkmark-custom"></div>
+                            <div class="feature-text">
+                                <strong>Type mine auto-école</strong>
+                                <span>Article R317-25 du code de la route</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+    </section>
 
+    <!-- Interior Gallery Section -->
+    <section class="interior-section">
+        <div class="container">
             <div class="section-header">
-                <h2 class="section-title">NOS VÉHICULES ET AGENCES</h2>
-                <p class="section-subtitle">Quelques photos des véhicules et agences à votre disposition</p>
+                <h2 class="section-title">Intérieur du véhicule</h2>
+                <p class="section-subtitle">Découvrez l'aménagement intérieur avec double commande</p>
             </div>
 
-            <div class="vehicles-gallery">
-                <div class="gallery-item">
-                    <div class="gallery-image">
-                        <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=600&h=400&fit=crop" alt="Véhicule auto-école">
+            <div class="interior-showcase">
+                <div class="interior-main-image">
+                    <div class="interior-image-card">
+                        <img src="clio-interieur-1.png" alt="Intérieur Renault Clio - Double commande" id="mainInteriorImage">
+                        <div class="image-overlay">
+                            <span class="image-label">Vue principale</span>
+                        </div>
                     </div>
-                    <h3 class="gallery-title">Agence Paris</h3>
                 </div>
-                <div class="gallery-item">
-                    <div class="gallery-image">
-                        <img src="https://images.unsplash.com/photo-1503376780353-7e6692767b70?w=600&h=400&fit=crop" alt="Véhicule auto-école">
+                <div class="interior-thumbnails">
+                    <div class="interior-thumb active" data-image="clio-interieur-1.png">
+                        <img src="clio-interieur-1.png" alt="Vue 1">
                     </div>
-                    <h3 class="gallery-title">Agence Lyon</h3>
+                    <div class="interior-thumb" data-image="clio-interieur-2.png">
+                        <img src="clio-interieur-2.png" alt="Vue 2">
+                    </div>
+                    <div class="interior-thumb" data-image="clio-interieur-3.png">
+                        <img src="clio-interieur-3.png" alt="Vue 3">
+                    </div>
                 </div>
-                <div class="gallery-item">
-                    <div class="gallery-image">
-                        <img src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?w=600&h=400&fit=crop" alt="Véhicule auto-école">
+            </div>
+        </div>
+    </section>
+
+    <!-- Specifications Section -->
+    <section class="specifications-section">
+        <div class="container">
+            <div class="section-header">
+                <h2 class="section-title">Caractéristiques techniques</h2>
+                <p class="section-subtitle">Tout ce qu'il faut savoir sur notre véhicule</p>
+            </div>
+
+            <div class="specs-grid">
+                <div class="spec-card">
+                    <div class="spec-icon icon-steering-wheel-svg">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" width="100%" height="100%">
+                            <g transform="translate(50, 50)">
+                                <!-- Cercle extérieur -->
+                                <circle cx="0" cy="0" r="30" fill="none" stroke="currentColor" stroke-width="6"/>
+                                <!-- Rayons -->
+                                <line x1="0" y1="-10" x2="0" y2="-24" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                                <line x1="-8.66" y1="5" x2="-20.78" y2="12" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                                <line x1="8.66" y1="5" x2="20.78" y2="12" stroke="currentColor" stroke-width="2.5" stroke-linecap="round"/>
+                                <!-- Cercle central -->
+                                <circle cx="0" cy="0" r="9" fill="currentColor"/>
+                            </g>
+                        </svg>
                     </div>
-                    <h3 class="gallery-title">Agence Marseille</h3>
+                    <h3 class="spec-title">Modèle</h3>
+                    <p class="spec-value">Renault Clio</p>
+                </div>
+                <div class="spec-card">
+                    <div class="spec-icon icon-gear-transmission"></div>
+                    <h3 class="spec-title">Transmission</h3>
+                    <p class="spec-value">Boîte manuelle</p>
+                </div>
+                <div class="spec-card">
+                    <div class="spec-icon icon-shield"></div>
+                    <h3 class="spec-title">Conformité</h3>
+                    <p class="spec-value">Article R317-25</p>
+                </div>
+                <div class="spec-card">
+                    <div class="spec-icon icon-double-command"></div>
+                    <h3 class="spec-title">Double commande</h3>
+                    <p class="spec-value">Frein & Débrayage</p>
                 </div>
             </div>
         </div>
@@ -98,21 +185,6 @@
                         <p class="testimonial-date">Le 15/01/2025</p>
                     </div>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA Final -->
-    <section class="cta-section">
-        <div class="container">
-            <div class="cta-content">
-                <div class="cta-item">
-                    <p class="cta-text">1H de conduite à partir de <strong>35,00 €</strong></p>
-                </div>
-                <div class="cta-item">
-                    <p class="cta-text">Formule 10H</p>
-                </div>
-                <a href="inscription.html" class="btn btn-primary btn-large">Prendre rendez-vous</a>
             </div>
         </div>
     </section>
