--- a/vehicules.html
+++ b/vehicules.html
@@ -30,6 +30,16 @@
                 </button>
             </div>
         </nav>
+        
+        <!-- Floating CTA Bar -->
+        <div class="floating-cta" id="floatingCta">
+            <div class="container">
+                <div class="floating-cta-content">
+                    <span class="floating-cta-text">Prêt à commencer ?</span>
+                    <a href="inscription.html" class="btn btn-primary">Prendre rendez-vous</a>
+                </div>
+            </div>
+        </div>
     </header>
 
     <!-- Page Header -->
