AJOUT DES IMAGES MASCOTTES

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="concept-content">
                 <div class="concept-image">
-                    <img src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?w=800&h=600&fit=crop" alt="Véhicule à double commande pour apprentissage de la conduite">
+                    <img src="concept-image.svg" alt="Véhicule à double commande pour apprentissage de la conduite">
                 </div>
                 <div class="concept-text">
                     <p>Conduire sans se ruiner, c'est possible grâce à Candidalib. Ne vous laissez plus emporter par des heures de conduite trop chères en auto-école. Maîtrisez votre compteur d'heures supplémentaires et préparez votre permis de conduire en conduisant une voiture à double commande avec votre accompagnateur bénévole.</p>
@@ -76,33 +76,6 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
-    <section class="stats-section">
-        <div class="container">
-            <div class="stats-grid">
-                <div class="stat-card">
-                    <div class="stat-icon icon-car"></div>
-                    <div class="stat-number" data-target="1819">0</div>
-                    <div class="stat-label">Clients satisfaits</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-star"></div>
-                    <div class="stat-number" data-target="98">0</div>
-                    <div class="stat-label">% de réussite</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-money"></div>
-                    <div class="stat-number" data-target="50">0</div>
-                    <div class="stat-label">% d'économies</div>
-                </div>
-                <div class="stat-card">
-                    <div class="stat-icon icon-clock"></div>
-                    <div class="stat-number" data-target="24">0</div>
-                    <div class="stat-label">h de réponse</div>
-                </div>
-            </div>
-        </div>
-    </section>
 
     <!-- Pourquoi Nous -->
     <section class="why-section">
@@ -205,49 +178,64 @@
         <div class="container">
             <!-- Candidat libre -->
             <div class="concept-block">
-                <div class="concept-block-header">
-                    <h2 class="section-title">L'épreuve de la conduite en candidat libre</h2>
-                    <h3 class="section-subtitle">NOTRE CONCEPT</h3>
+                <div class="concept-illustration">
+                    <img src="mascotte-jeune.svg" alt="Illustration candidat libre jeune">
                 </div>
-                <div class="concept-block-content">
-                    <p>Passer votre permis de conduire sans rattachement à une auto-école, c'est possible. Qu'il s'agisse de votre examen théorique ou bien de votre épreuve pratique vous pouvez choisir cette formule à petit budget. Cette formule de formation vous permet un apprentissage en toute simplicité et en autonomie. Découvrez tout ce qu'il faut savoir à propos de l'examen pratique en candidat avec Candidalib.</p>
-                    <div class="conditions-box">
-                        <h4>CONDITIONS</h4>
-                        <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
-                        <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
+                <div class="concept-details">
+                    <div class="concept-block-header">
+                        <h2 class="section-title">L'épreuve de la conduite en candidat libre</h2>
+                        <h3 class="section-subtitle">NOTRE CONCEPT</h3>
                     </div>
-                    <a href="candidat-libre.html" class="btn btn-secondary">En savoir plus</a>
+                    <div class="concept-block-content">
+                        <p>Passer votre permis de conduire sans rattachement à une auto-école, c'est possible. Qu'il s'agisse de votre examen théorique ou bien de votre épreuve pratique vous pouvez choisir cette formule à petit budget. Cette formule de formation vous permet un apprentissage en toute simplicité et en autonomie. Découvrez tout ce qu'il faut savoir à propos de l'examen pratique en candidat avec Candidalib.</p>
+                        <div class="conditions-box">
+                            <h4>CONDITIONS</h4>
+                            <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
+                            <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
+                        </div>
+                        <a href="candidat-libre.html" class="btn btn-secondary">En savoir plus</a>
+                    </div>
                 </div>
             </div>
 
             <!-- Remise à niveau -->
-            <div class="concept-block">
-                <div class="concept-block-header">
-                    <h2 class="section-title">Vous êtes en remise à niveau</h2>
-                    <h3 class="section-subtitle">NOTRE CONCEPT</h3>
+            <div class="concept-block reverse">
+                <div class="concept-illustration">
+                    <img src="mascotte-adulte.svg" alt="Illustration remise à niveau adulte">
                 </div>
-                <div class="concept-block-content">
-                    <p>Vous possédez déjà votre permis de conduire, mais vous n'avez pas conduit depuis un certain temps et vous manquez de confiance en vous. Candidalib vous permet de reprendre la main en étant accompagné de l'un de vos proches. La location de nos véhicules écoles vous permettra de retrouver vos acquis. Cette solution est très avantageuse car vous reverrez les éléments que vous jugerez essentiels à votre réapprentissage à la conduite.</p>
-                    <div class="conditions-box">
-                        <h4>CONDITIONS</h4>
-                        <p><strong>Apprenti :</strong> Être titulaire du permis</p>
-                        <p><strong>Accompagnateur :</strong> Être titulaire du permis depuis plus de 5 ans</p>
+                <div class="concept-details">
+                    <div class="concept-block-header">
+                        <h2 class="section-title">Vous êtes en remise à niveau</h2>
+                        <h3 class="section-subtitle">NOTRE CONCEPT</h3>
+                    </div>
+                    <div class="concept-block-content">
+                        <p>Vous possédez déjà votre permis de conduire, mais vous n'avez pas conduit depuis un certain temps et vous manquez de confiance en vous. Candidalib vous permet de reprendre la main en étant accompagné de l'un de vos proches. La location de nos véhicules écoles vous permettra de retrouver vos acquis. Cette solution est très avantageuse car vous reverrez les éléments que vous jugerez essentiels à votre réapprentissage à la conduite.</p>
+                        <div class="conditions-box">
+                            <h4>CONDITIONS</h4>
+                            <p><strong>Apprenti :</strong> Être titulaire du permis</p>
+                            <p><strong>Accompagnateur :</strong> Être titulaire du permis depuis plus de 5 ans</p>
+                        </div>
                     </div>
                 </div>
             </div>
 
             <!-- Conduite supervisée -->
             <div class="concept-block">
-                <div class="concept-block-header">
-                    <h2 class="section-title">Vous passez le permis ACC, 16 ans ou conduite supervisée</h2>
-                    <h3 class="section-subtitle">NOTRE CONCEPT</h3>
+                <div class="concept-illustration">
+                    <img src="mascotte-supervisee.svg" alt="Illustration conduite supervisée">
                 </div>
-                <div class="concept-block-content">
-                    <p>Vous venez de valider la durée initiale de formation avec votre auto-école et vous vous apprêtez à conduire officiellement avec votre accompagnateur bénévole sur les voies publiques. Cette épreuve est souvent redoutée par de nombreux apprentis, car ils vont devoir conduire avec une personne autre que leur formateur.</p>
-                    <div class="conditions-box">
-                        <h4>CONDITIONS</h4>
-                        <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
-                        <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
+                <div class="concept-details">
+                    <div class="concept-block-header">
+                        <h2 class="section-title">Vous passez le permis ACC, 16 ans ou conduite supervisée</h2>
+                        <h3 class="section-subtitle">NOTRE CONCEPT</h3>
+                    </div>
+                    <div class="concept-block-content">
+                        <p>Vous venez de valider la durée initiale de formation avec votre auto-école et vous vous apprêtez à conduire officiellement avec votre accompagnateur bénévole sur les voies publiques. Cette épreuve est souvent redoutée par de nombreux apprentis, car ils vont devoir conduire avec une personne autre que leur formateur.</p>
+                        <div class="conditions-box">
+                            <h4>CONDITIONS</h4>
+                            <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
+                            <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
+                        </div>
                     </div>
                 </div>
             </div>
