REFONTE SITE AJOUT MASCOTTES

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <div class="nav-brand">
                     <a href="index.html" class="logo">
-                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                        <img src="assets/logocandi.jpg" alt="Candidalib" class="logo-img">
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -65,7 +65,7 @@
             </div>
             <div class="concept-content">
                 <div class="concept-image">
-                    <img src="concept-image.svg" alt="Véhicule à double commande pour apprentissage de la conduite">
+                    <img src="assets/concept-image.svg" alt="Véhicule à double commande pour apprentissage de la conduite">
                 </div>
                 <div class="concept-text">
                     <p>Conduire sans se ruiner, c'est possible grâce à Candidalib. Ne vous laissez plus emporter par des heures de conduite trop chères en auto-école. Maîtrisez votre compteur d'heures supplémentaires et préparez votre permis de conduire en conduisant une voiture à double commande avec votre accompagnateur bénévole.</p>
@@ -179,7 +179,7 @@
             <!-- Candidat libre -->
             <div class="concept-block">
                 <div class="concept-illustration">
-                    <img src="mascotte-jeune.svg" alt="Illustration candidat libre jeune">
+                    <img src="assets/mascotte-jeune.svg" alt="Illustration candidat libre jeune">
                 </div>
                 <div class="concept-details">
                     <div class="concept-block-header">
@@ -201,7 +201,7 @@
             <!-- Remise à niveau -->
             <div class="concept-block reverse">
                 <div class="concept-illustration">
-                    <img src="mascotte-adulte.svg" alt="Illustration remise à niveau adulte">
+                    <img src="assets/mascotte-adulte.svg" alt="Illustration remise à niveau adulte">
                 </div>
                 <div class="concept-details">
                     <div class="concept-block-header">
@@ -222,7 +222,7 @@
             <!-- Conduite supervisée -->
             <div class="concept-block">
                 <div class="concept-illustration">
-                    <img src="mascotte-supervisee.svg" alt="Illustration conduite supervisée">
+                    <img src="assets/mascotte-supervisee.svg" alt="Illustration conduite supervisée">
                 </div>
                 <div class="concept-details">
                     <div class="concept-block-header">
