--- a/vehicules.html
+++ b/vehicules.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="nav-brand">
                     <a href="index.html" class="logo">
-                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                        <img src="assets/logocandi.jpg" alt="Candidalib" class="logo-img">
                     </a>
                 </div>
                 <ul class="nav-menu">
@@ -80,7 +80,7 @@
                 <!-- Colonne Image -->
                 <div class="vehicle-image-col">
                     <div class="vehicle-image-circle">
-                        <img src="clio.jpg" alt="Renault Clio 5 Auto-école" class="vehicle-hero-img">
+                        <img src="assets/clio.jpg" alt="Renault Clio 5 Auto-école" class="vehicle-hero-img">
                     </div>
                 </div>
             </div>
@@ -97,20 +97,20 @@
 
             <div class="gallery-layout">
                 <div class="main-view">
-                    <img src="clio-interieur-1.png" alt="Vue intérieure principale" id="mainInteriorImage">
+                    <img src="assets/clio-interieur-1.png" alt="Vue intérieure principale" id="mainInteriorImage">
                     <div class="view-overlay">
                         <span class="view-tag">Vue cockpit</span>
                     </div>
                 </div>
                 <div class="thumbnails-grid">
-                    <div class="thumb-item active" onclick="changeImage(this, 'clio-interieur-1.png')">
-                        <img src="clio-interieur-1.png" alt="Cockpit">
+                    <div class="thumb-item active" onclick="changeImage(this, 'assets/clio-interieur-1.png')">
+                        <img src="assets/clio-interieur-1.png" alt="Cockpit">
                     </div>
-                    <div class="thumb-item" onclick="changeImage(this, 'clio-interieur-2.png')">
-                        <img src="clio-interieur-2.png" alt="Passager">
+                    <div class="thumb-item" onclick="changeImage(this, 'assets/clio-interieur-2.png')">
+                        <img src="assets/clio-interieur-2.png" alt="Passager">
                     </div>
-                    <div class="thumb-item" onclick="changeImage(this, 'clio-interieur-3.png')">
-                        <img src="clio-interieur-3.png" alt="Commandes">
+                    <div class="thumb-item" onclick="changeImage(this, 'assets/clio-interieur-3.png')">
+                        <img src="assets/clio-interieur-3.png" alt="Commandes">
                     </div>
                 </div>
             </div>
