--- a/inscription.html
+++ b/inscription.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="nav-brand">
                     <a href="index.html" class="logo">
-                        <img src="logocandi.jpg" alt="Candidalib" class="logo-img">
+                        <img src="assets/logocandi.jpg" alt="Candidalib" class="logo-img">
                     </a>
                 </div>
                 <ul class="nav-menu">
