Modification texte acceuil " Avoir fait sa demande de permis sur ants.gouv.fr"

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         <p>Passer votre permis de conduire sans rattachement à une auto-école, c'est possible. Qu'il s'agisse de votre examen théorique ou bien de votre épreuve pratique vous pouvez choisir cette formule à petit budget. Cette formule de formation vous permet un apprentissage en toute simplicité et en autonomie. Découvrez tout ce qu'il faut savoir à propos de l'examen pratique en candidat avec Candidalib.</p>
                         <div class="conditions-box">
                             <h4>CONDITIONS</h4>
-                            <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
+                            <p><strong>Apprenti :</strong> Avoir fait sa demande de permis sur www.ants.gouv.fr</p>
                             <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
                         </div>
                         <a href="candidat-libre.html" class="btn btn-secondary">En savoir plus</a>
