Modification texte acceuil " Nous vous fournissons un Accompagnateur expérimenté qui vous suivra tout au long de votre formation."

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                     <img src="assets/concept-image.svg" alt="Véhicule à double commande pour apprentissage de la conduite">
                 </div>
                 <div class="concept-text">
-                    <p>Conduire sans se ruiner, c'est possible grâce à Candidalib. Ne vous laissez plus emporter par des heures de conduite trop chères en auto-école. Maîtrisez votre compteur d'heures supplémentaires et préparez votre permis de conduire en conduisant une voiture à double commande avec votre accompagnateur bénévole.</p>
-                    <p>Louez un véhicule à double commande aux normes pour votre préparation et votre examen.</p>
+                    <p>Préparez votre permis sans vous ruiner. Candidalib vous permet de maîtriser votre budget en louant un véhicule à double commande aux normes, avec votre accompagnateur ou le nôtre.</p>
+                    <p><strong>Pas d'accompagnateur ?</strong> Nous vous fournissons un Accompagnateur expérimenté qui vous suivra tout au long de votre formation.</p>
                     <a href="candidat-libre.html" class="btn btn-secondary">Découvrir notre concept</a>
                 </div>
             </div>
