ajout logo carte prix 2/3

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <div class="pricing-cards">
                 <div class="pricing-card">
                     <div class="card-badge">1H</div>
-                    <div class="card-icon icon-time"></div>
+                    <div class="card-icon"><img src="assets/logo-tortue.svg" alt="Tortue" style="width: 155%; height: 155%; object-fit: contain; transform: translateX(7%);"></div>
                     <h3 class="card-title">Pack par heure</h3>
                     <p class="card-price">1h à partir de <strong>35€</strong></p>
                     <ul class="card-features">
@@ -99,7 +99,7 @@
                 </div>
                 <div class="pricing-card featured">
                     <div class="card-badge">Formule 10H</div>
-                    <div class="card-icon icon-diamond"></div>
+                    <div class="card-icon"><img src="assets/logo-lievre.svg" alt="Lièvre" style="width: 150%; height: 150%; object-fit: contain;"></div>
                     <h3 class="card-title">Forfait de 10 heures</h3>
                     <p class="card-price">À partir de <strong>300€</strong></p>
                     <div class="card-savings">Économisez 50€</div>
