Ajout logo carte prix 3/3

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </div>
                 <div class="pricing-card">
                     <div class="card-badge">EXAMEN</div>
-                    <div class="card-icon icon-target"></div>
+                    <div class="card-icon"><img src="assets/logo-examen.svg" alt="Examen" style="width: 150%; height: 150%; object-fit: contain;"></div>
                     <h3 class="card-title">Forfait présentation à l'examen</h3>
                     <p class="card-price">À partir de <strong>70€</strong></p>
                     <ul class="card-features">
