--- a/cgu.html
+++ b/cgu.html
@@ -20,7 +20,7 @@
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
                     <li><a href="vehicules.html" class="nav-link">Nos véhicules</a></li>
                     <li><a href="candidat-libre.html" class="nav-link">Candidat libre</a></li>
-                    <li><a href="inscription.html" class="nav-link btn-nav">Inscription</a></li>
+                    <li><a href="tunnel.html" class="nav-link btn-nav">Inscription</a></li>
                 </ul>
                 <button class="menu-toggle" aria-label="Menu">
                     <span></span>
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="floating-cta-content">
                     <span class="floating-cta-text">Prêt à commencer ?</span>
-                    <a href="inscription.html" class="btn btn-primary">Prendre rendez-vous</a>
+                    <a href="contact.html" class="btn btn-primary">Prendre rendez-vous</a>
                 </div>
             </div>
         </div>
@@ -142,7 +142,7 @@
                         <li><a href="mentions-legales.html">Mentions Légales</a></li>
                         <li><a href="cgu.html">CGU</a></li>
                         <li><a href="confidentialite.html">Politique de confidentialité</a></li>
-                        <li><a href="inscription.html">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
