--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
                     <li><a href="vehicules.html" class="nav-link">Nos véhicules</a></li>
                     <li><a href="candidat-libre.html" class="nav-link">Candidat libre</a></li>
-                    <li><a href="inscription.html" class="nav-link btn-nav">Inscription</a></li>
+                    <li><a href="tunnel.html" class="nav-link btn-nav">Inscription</a></li>
                 </ul>
                 <button class="menu-toggle" aria-label="Menu">
                     <span></span>
@@ -97,7 +97,7 @@
                         <li><a href="index.html">Accueil</a></li>
                         <li><a href="vehicules.html">Nos véhicules</a></li>
                         <li><a href="candidat-libre.html">Candidat libre</a></li>
-                        <li><a href="inscription.html">Inscription</a></li>
+                        <li><a href="tunnel.html">Inscription</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
