--- a/candidat-libre.html
+++ b/candidat-libre.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
                     <li><a href="vehicules.html" class="nav-link">Nos véhicules</a></li>
                     <li><a href="candidat-libre.html" class="nav-link active">Candidat libre</a></li>
-                    <li><a href="inscription.html" class="nav-link btn-nav">Inscription</a></li>
+                    <li><a href="contact.html" class="nav-link btn-nav">Contact</a></li>
                 </ul>
                 <button class="menu-toggle" aria-label="Menu">
                     <span></span>
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="floating-cta-content">
                     <span class="floating-cta-text">Prêt à commencer ?</span>
-                    <a href="inscription.html" class="btn btn-primary">Prendre rendez-vous</a>
+                    <a href="contact.html" class="btn btn-primary">Prendre rendez-vous</a>
                 </div>
             </div>
         </div>
@@ -82,7 +82,7 @@
             </div>
 
             <div class="cta-inline">
-                <a href="inscription.html" class="btn btn-primary">Réserver un véhicule</a>
+                <a href="tunnel.html" class="btn btn-primary">Réserver un véhicule</a>
             </div>
         </div>
     </section>
@@ -97,7 +97,7 @@
                 <div class="cta-item">
                     <p class="cta-text">Formule 10H</p>
                 </div>
-                <a href="inscription.html" class="btn btn-primary btn-large">Prendre rendez-vous</a>
+                <a href="tunnel.html" class="btn btn-primary btn-large">Prendre rendez-vous</a>
             </div>
         </div>
     </section>
@@ -138,7 +138,7 @@
                         <li><a href="mentions-legales.html">Mentions Légales</a></li>
                         <li><a href="cgu.html">CGU</a></li>
                         <li><a href="confidentialite.html">Politique de confidentialité</a></li>
-                        <li><a href="inscription.html">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
