--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="container">
                 <div class="floating-cta-content">
                     <span class="floating-cta-text">Prêt à commencer ?</span>
-                    <a href="tunnel.html" class="btn btn-primary">Prendre rendez-vous</a>
+                    <a href="contact.html" class="btn btn-primary">Prendre rendez-vous</a>
                 </div>
             </div>
         </div>
