--- a/vehicules.html
+++ b/vehicules.html
@@ -21,7 +21,7 @@
                     <li><a href="index.html" class="nav-link">Accueil</a></li>
                     <li><a href="vehicules.html" class="nav-link active">Nos véhicules</a></li>
                     <li><a href="candidat-libre.html" class="nav-link">Candidat libre</a></li>
-                    <li><a href="inscription.html" class="nav-link btn-nav">Inscription</a></li>
+                    <li><a href="tunnel.html" class="nav-link btn-nav">Inscription</a></li>
                 </ul>
                 <button class="menu-toggle" aria-label="Menu">
                     <span></span>
@@ -36,7 +36,7 @@
             <div class="container">
                 <div class="floating-cta-content">
                     <span class="floating-cta-text">Prêt à commencer ?</span>
-                    <a href="inscription.html" class="btn btn-primary">Prendre rendez-vous</a>
+                    <a href="contact.html" class="btn btn-primary">Prendre rendez-vous</a>
                 </div>
             </div>
         </div>
@@ -74,7 +74,7 @@
                             <span class="highlight-label">Sécurité</span>
                         </div>
                     </div>
-                    <a href="inscription.html" class="btn btn-primary btn-lg">Réserver ce véhicule</a>
+                    <a href="tunnel.html" class="btn btn-primary btn-lg">Réserver ce véhicule</a>
                 </div>
 
                 <!-- Colonne Image -->
@@ -217,7 +217,7 @@
                         <li><a href="mentions-legales.html">Mentions Légales</a></li>
                         <li><a href="cgu.html">CGU</a></li>
                         <li><a href="confidentialite.html">Politique de confidentialité</a></li>
-                        <li><a href="inscription.html">Contact</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
