Modif All "notre concept" c'est carré

--- a/index.html
+++ b/index.html
@@ -166,7 +166,9 @@
                         <h3 class="section-subtitle">NOTRE CONCEPT</h3>
                     </div>
                     <div class="concept-block-content">
-                        <p>Vous possédez déjà votre permis de conduire, mais vous n'avez pas conduit depuis un certain temps et vous manquez de confiance en vous. Candidalib vous permet de reprendre la main en étant accompagné de l'un de vos proches. La location de nos véhicules écoles vous permettra de retrouver vos acquis. Cette solution est très avantageuse car vous reverrez les éléments que vous jugerez essentiels à votre réapprentissage à la conduite.</p>
+                        <p>Vous avez déjà votre permis, mais la confiance au volant s’est estompée ?</p>
+                         <p>Avec Candidalib, reprenez la route sereinement.</p>
+                          <p>Nos accompagnateurs, qualifiés pour ces situations, sauront vous redonner l’assurance que vous méritez. Louez nos véhicules double commande, concentrez-vous sur ce qui est essentiel, et reprenez la main en toute confiance.</p>
                         <div class="conditions-box">
                             <h4>CONDITIONS</h4>
                             <p><strong>Apprenti :</strong> Être titulaire du permis</p>
@@ -197,6 +199,7 @@
                             <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
                             <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
                         </div>
+                        <a href="candidat-libre.html" class="btn btn-secondary" style="margin-top: var(--space-6); display: inline-block;">En savoir plus</a>
                     </div>
                 </div>
             </div>
