--- a/index.html
+++ b/index.html
@@ -193,7 +193,8 @@
                         <h3 class="section-subtitle">NOTRE CONCEPT</h3>
                     </div>
                     <div class="concept-block-content">
-                        <p>Vous venez de valider la durée initiale de formation avec votre auto-école et vous vous apprêtez à conduire officiellement avec votre accompagnateur bénévole sur les voies publiques. Cette épreuve est souvent redoutée par de nombreux apprentis, car ils vont devoir conduire avec une personne autre que leur formateur.</p>
+                        <p>Vous venez de valider la durée initiale de formation avec votre auto-école et vous vous apprêtez à conduire officiellement avec l'un de vos proches sur les voies publiques. Mais ces dernièrs ne sont pas disponibles ? .</p>
+                        <p>Avec Candidalib, vous pouvez conduire avec l'un de nos accompagnateurs qualifiés, qui vous suivront tout au long de votre formation.</p>
                         <div class="conditions-box">
                             <h4>CONDITIONS</h4>
                             <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
