--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <p><strong>Apprenti :</strong> Avoir fait sa demande de permis sur www.ants.gouv.fr</p>
                             <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
                         </div>
-                        <a href="candidat-libre.html" class="btn btn-secondary">En savoir plus</a>
+                        <a href="contact.html" class="btn btn-secondary">En savoir plus</a>
                     </div>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                             <p><strong>Apprenti :</strong> Avoir effectué 20h en auto-école</p>
                             <p><strong>Accompagnateur :</strong> Être titulaire du permis de conduire depuis plus de 5 ans</p>
                         </div>
-                        <a href="candidat-libre.html" class="btn btn-secondary" style="margin-top: var(--space-6); display: inline-block;">En savoir plus</a>
+                        <a href="contact.html" class="btn btn-secondary" style="margin-top: var(--space-6); display: inline-block;">En savoir plus</a>
                     </div>
                 </div>
             </div>
